# TorrSearch

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
deploy/: bootstrap.yaml  docker-entrypoint.sh
docs/superpowers/plans/: 2026-06-19-downloads-view.md  2026-06-19-notifications.md  2026-06-19-result-filters.md  2026-06-19-saved-searches.md  2026-06-19-settings-ui.md  2026-06-19-shareable-distribution.md  2026-06-19-torsearch-v1.md  2026-06-20-discover-tmdb.md  2026-06-20-movie-library.md  2026-06-20-simple-auth.md  2026-06-20-ui-redesign-phase1.md  2026-06-21-discovery-jellyfin.md  2026-06-21-download-paths.md  2026-06-21-series-library.md  2026-06-25-open-source-readiness-plan.md
tests/: test_auth.py  test_authz.py  test_components.py  test_config.py  test_context.py  test_db.py  test_discover_web.py  test_downloads_web.py  test_episode_parser.py  test_filters.py  test_indexer_base.py  test_jellyfin.py  test_library_web.py  test_login_throttle.py  test_main.py  test_models.py  test_monitor_history.py  test_monitor_runner.py  test_movie_library.py  test_notifier.py  test_registry.py  test_requests.py  test_requests_web.py  test_search_service.py  test_series_library.py  test_series_web.py  test_settings_mutations.py  test_settings_store.py  test_settings_web.py  test_smoke.py  test_surveillance_web.py  test_tmdb.py  test_torznab_indexer.py  test_torznab_parse.py  test_torznab_test.py  test_transmission.py  test_users.py  test_users_web.py  test_web.py
tests/fixtures/: torznab_sample.xml
torsearch/: config.py  context.py  main.py  models.py
torsearch/db/: database.py
torsearch/indexers/: base.py  registry.py  torznab.py
torsearch/jellyfin/: client.py
torsearch/metadata/: tmdb.py
torsearch/monitor/: history.py  runner.py
torsearch/notifications/: notifier.py
torsearch/requests/: store.py
torsearch/search/: filters.py  service.py
torsearch/settings/: mutations.py  store.py
torsearch/transmission/: client.py
torsearch/users/: passwords.py  store.py
torsearch/web/: auth.py  auth_routes.py  authz.py  discover_routes.py  downloads_routes.py  library_routes.py  requests_routes.py  routes.py  series_routes.py  settings_routes.py  surveillance_routes.py  templating.py
(+46 files in other folders)
